# Software-Development-Cpp-cs253

./: .gitignore  README.md  school-ws.code-workspace
HW1/: CMakeLists.txt  README.md  data  hw1.doc  multipleLines
HW2/: CMakeLists.txt  Enemy.cc  Enemy.h  Error.cc  Input.h  Keys.cc  Makefile  README.md
HW2/testfiles/: hw1  novaluetest
HW3/: Enemy.cc  Keys.cc  Keys.h  Makefile  README.md  Utilities.cc  Utilities.h  main.cc
HW4/: Makefile  README.md  Utilities.h  in3  keys  pony-villains
HW5/: Enemy.cc  Enemy.h  Gallery.cc  Gallery.h  README.md  jaws  test.cc
HW6/: CMakeLists.txt  Makefile  README.md  gold-odd
HW7/: Enemy.cc  Gallery.h  Makefile  README.md  pokémon  test
HW8/: Gallery.cc  Gallery.h  README.md  oz-keys  test
HW8/hw6_grading/: CMakeLists.txt
HW8/hw6_grading/data/: bond-villains  duplicatekeysEnemy  file1  file2  file3  file4  goodpony  in1  jaws  lorKeys  lorRoles  lorVillains  wrongkey1
HW8/hw6_grading/tests_array_subscript_op/: test_array_subscript_int_enemy.cc  test_array_subscript_int_enemy_range_error.cc~  test_array_subscript_int_gallery.cc  test_array_subscript_wrong_key_enemy.cc
HW8/hw6_grading/tests_boolean_conversion_op/: test_empty_enemy.cc
HW8/hw6_grading/tests_hw5/: CMakeLists.txt  test03.cc  test04.cc  test05.cc  test06.cc  test16.cc  test19.cc  test22.cc  test26.cc  test28.cc  test29.cc  test32.cc  test34.cc  test35.cc  test41.cc  test43.cc  test45.cc  test46.cc  test48.cc  test51.cc  test55.cc  test59.cc  test61.cc  test62.cc
HW8/hw6_grading/tests_iter/: CMakeLists.txt  runcasesin.sh  test10eiter_copyAssign.cc  test11eiter_equals.cc  test12eiter_increment.cc  test13eiter_decrement.cc  test14eiter_getReference.cc  test15integration_1.cc  test16integration_2.cc  test1giter_begin.cc  test2giter_end.cc  test3giter_copyAssign.cc  test4giter_equals.cc  test5giter_increment.cc  test6giter_decrement.cc  test7giter_getReference.cc  test8eiter_begin.cc  test9eiter_end.cc
HW8/speed-test-files/: Enemy.h  Makefile  e3  e4  test  test.cc
TAcs270fa2019/P2/src/: iFloat.c  testFloat
cs253/H0/: Makefile  hw0  hw0.cc
cs253/HW1/: Makefile  duplicateKeys  hw1  hw1.cc  notAlphabeticTest  tabsTest
cs253/HW2/: CMakeLists.txt  Enemy.cc  Enemy.h  Error.cc  Error.h  Input.cc  Input.h  Keys.cc  Keys.h  Utilities.cc  Utilities.h  in1  in2  in3  main.cc
cs253/HW3/: CMakeLists.txt  Enemy.cc  Enemy.h  Error.cc  Error.h  Input.cc  Input.h  Utilities.cc  Utilities.h  data  in1  in2  in3  keys  main.cc
cs253/HW4/: CMakeLists.txt  Enemy.cc  Enemy.h  Error.cc  Error.h  Input.cc  Keys.h  Utilities.cc  Utilities.h  in1  test.cc
cs253/HW5/: CMakeLists.txt  Keys.cc  Makefile  bond-villains
cs253/HW6/: Enemy.cc  Enemy.h  Gallery.cc  Gallery.h  Keys.cc  Keys.h  Utilities.cc  pokékeys  test  test.cc
cs253/HW7/: CMakeLists.txt  Enemy.h  Gallery.cc  Utilities.h  test.cc
cs253/HW8/: CMakeLists.txt  Enemy.cc  Enemy.h  Makefile  enemiesFile  keyFile  oz-villains  test  test.cc
cs253/HW8/hw6_grading/: CMakeLists.txt  README.md
cs253/HW8/hw6_grading/data/: enemyB  in3  in4  keys  minimal_keys
cs253/HW8/hw6_grading/tests_array_subscript_op/: test_array_subscript_empty_enemy.cc  test_array_subscript_int_enemy_range_error.cc  test_array_subscript_int_gallery_range_error.cc  test_array_subscript_key_empty_enemy.cc  test_array_subscript_key_enemy.cc
cs253/HW8/hw6_grading/tests_boolean_conversion_op/: CMakeLists.txt  test_empty_gallery.cc  test_enemy_with_data.cc  test_enemy_with_other_data.cc  test_gallery_with_data.cc  test_gallery_with_other_data.cc
cs253/HW8/hw6_grading/tests_eq_ne_op/: CMakeLists.txt  test_eq_different_enemy.cc  test_eq_empty_enemy.cc  test_eq_empty_enemy_different_keyfile.cc  test_eq_enemy_copy.cc  test_eq_enemy_with_data.cc  test_eq_enemy_with_data_different_keyfile.cc
cs253/HW8/hw6_grading/tests_hw5/: test01.cc  test02.cc  test07.cc  test08.cc  test09.cc  test10.cc  test11.cc  test12.cc  test13.cc  test14.cc  test15.cc  test17.cc  test18.cc  test21.cc  test23.cc  test24.cc  test25.cc  test27.cc  test30.cc  test31.cc  test33.cc  test36.cc  test37.cc  test38.cc  test39.cc  test40.cc  test44.cc  test47.cc  test49.cc  test50.cc  test52.cc  test53.cc  test54.cc  test56.cc  test57.cc  test58.cc  test60.cc  test63.cc
cs253/HW8/hw6_grading/tests_hw5/data/: enemyC  file0  file00  file5  iamkey1  noNamekey  nonAlphkeyEnemy  readNoMatchEnemy
cs253/HW8/hw6_grading/tests_samples/: CMakeLists.txt  test_hw6_samples.cc
cs253/HW8/hw6_grading/tests_samples/data/: keys  pokémon
cs370/HW1/: Executor.c  Executor.h  Invoker.c  Makefile  README.txt
cs370/HW2/: Blue.c  Green.c  Makefile  README.txt  Red.c  Starter.c  coded_image_1.txt
cs370/HW3/: Blue.c  FileReader.c  Green.c  Makefile  README.txt  Red.c  Starter.c  coded_image_2.txt
(+12 files in other folders)
